--- a/main/templates/main/create_booking.html
+++ b/main/templates/main/create_booking.html
@@ -14,7 +14,7 @@
   <div class="bg-white rounded-2xl shadow-2xl border border-gray-100 overflow-hidden fade-in">
     
     {% if venue.main_image %}
-    <img src="{{ venue.main_image.url }}" alt="Foto {{ venue.name }}" class="w-full h-64 object-cover object-center fade-in-scale">
+    <img src="{{ venue.main_image }}" alt="Foto {{ venue.name }}" class="w-full h-64 object-cover object-center fade-in-scale">
     {% endif %}
 
     <div class="p-6 md:p-8 fade-in animate-delay-100">
